--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ dependencies:
   rxdart: ^0.27.5
   smooth_page_indicator: ^1.1.0
   fade_out_particle: ^1.2.1
+  firebase_core: ^2.15.1
+  firebase_auth: ^4.14.0
 
 dev_dependencies:
   flutter_test:
