--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   fade_out_particle: ^1.2.1
   firebase_core: ^2.15.1
   firebase_auth: ^4.14.0
+  shared_preferences: ^2.1.1
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
