--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   firebase_auth: ^4.14.0
   shared_preferences: ^2.1.1
   flutter_riverpod: ^2.3.6
+  google_sign_in: ^6.1.6
+  github_sign_in_plus: ^0.0.2
 
 dev_dependencies:
   flutter_test:
