--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   google_sign_in: ^6.1.6
   github_sign_in_plus: ^0.0.2
+  ably_flutter: ^1.2.23
 
 dev_dependencies:
   flutter_test:
